feat: new architecture

--- a/package.json
+++ b/package.json
@@ -1,6 +1,14 @@
 {
-  "name": "geoip2-cities-transformation",
+  "scripts": {
+      "lint": "./node_modules/.bin/eslint .",
+      "lint:fix": "./node_modules/.bin/eslint . --fix"
+  },
   "dependencies": {
     "@dataform/core": "2.4.2"
+  },
+  "devDependencies": {
+      "eslint": "^8.38.0",
+      "eslint-config-airbnb-base": "^15.0.0",
+      "eslint-plugin-import": "^2.27.5"
   }
 }
